Adiciona os métodos create() e retrieveAll() de Grandeza Elétrica

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ## mysql
 MYSQL_USER=root
-MYSQL_HOST=localhost
+MYSQL_HOST=191.4.119.231
 MYSQL_PASSWORD=password
 MYSQL_PORT=3306
 MYSQL_DATABASE=jarvis
